Menu on mobile fix

--- a/src/Button/button.scss
+++ b/src/Button/button.scss
@@ -91,7 +91,7 @@
   }
 
   &--bordered {
-    border: 1px solid $color-grey-dark-3;
+    border: 1px solid rgba($color-primary, 0.5);
     color: $color-grey-dark-3;
     background: transparent;
 
