--- a/src/Nav/nav.scss
+++ b/src/Nav/nav.scss
@@ -124,13 +124,25 @@
     svg {
       width: 1.6rem;
       height: 1.6rem;
-      width: 2.4rem;
-      height: 2.4rem;
+      width: 3.2rem;
+      height: 3.2rem;
     }
     cursor: pointer;
 
     @include respond(phone) {
-      display: initial;
+      display: flex;
+      align-items: center;
+    }
+
+    * > *:first-child {
+      margin-right: 1rem;
+    }
+
+    & > * {
+      @include respond(phone) {
+        display: flex;
+        align-items: center;
+      }
     }
   }
 }
